--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -170,7 +170,7 @@
         <ion-avatar item-start>
             <img src="assets/img/14.jpg" alt=""/>
         </ion-avatar>
-        <h2>حسين محمود  <span>{{'minute'|translate}} {{'Ago'| translate}}</span></h2>
+        <h2>حسين محمود  <span>منذ دقيقة</span></h2>
         <div class="user-rate">
             <div class="stats-container">
                 <div class="rating-b" >
@@ -180,10 +180,13 @@
                     <div class="rating-b-2" style="width:60%">
                         <img src="assets/img/rating-b-2.png" alt=""/>
                     </div>
+                    
                 </div>
-                <span> 3.0</span>
+                
 
-                <div class="review-num"><h4>25 {{'Review'| translate}}</h4></div>
+                <div class="review-num">
+                    <span> 3.0</span>
+                    <h4>25 {{'Review'| translate}}</h4></div>
             </div>
         </div>
         <p>I've had a pretty messed up day. If we just...</p>
