--- a/src/pages/get-location/get-location.html
+++ b/src/pages/get-location/get-location.html
@@ -1,12 +1,16 @@
 <ion-header>
   <ion-navbar>
     <ion-title>{{'Location'|translate}}</ion-title>
-    <ion-buttons start>
-      <button ion-button (click)="dismiss()">
-        <ion-icon name="close"></ion-icon>
+    <ion-buttons start >
+      <button ion-button (click)="dismiss(true)">
+        <ion-icon  color="danger" name="close"></ion-icon>
       </button>
+
     </ion-buttons>
     <ion-buttons end>
+      <button ion-button large (click)="dismiss()">
+        <ion-icon color="primary" name="search"></ion-icon>
+      </button>
       <button ion-button (click)="addMarker()">
         <ion-icon ios="ios-locate-outline" md="ios-locate-outline"></ion-icon>
       </button>
@@ -17,6 +21,7 @@
 
 <ion-content>
   <div #map id="map" style="height:100%;"></div>
+
 </ion-content>
-<ion-header>
+
 
