add phone number to phone list on popover component

--- a/src/pages/user-list/user-list.html
+++ b/src/pages/user-list/user-list.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class='button-div'>
                     <ion-icon name="chatbubbles" (click)="MessagesDetail(provider.id)"></ion-icon> 
-                    <ion-icon name="call" (click)="openPopover($event)"></ion-icon>     
+                    <ion-icon name="call" (click)="openPopover($event, provider.mobile)"></ion-icon>     
                 </div>
 
             </ion-item>
