--- a/src/pages/add-request/add-request.html
+++ b/src/pages/add-request/add-request.html
@@ -11,57 +11,85 @@
     <div class="inner-content">
         <ion-list>
             <ion-item>
-                <ion-label stacked>{{'project title'|translate}}</ion-label>
+<ion-label stacked>{{'project title'|translate}}</ion-label>
+
                 <ion-input type="text" placeholder="Request title"></ion-input>
             </ion-item>
-            <ion-item>
-                <ion-label stacked>{{'Request location'|translate}}</ion-label>
-                <ion-input type="text" placeholder="Request location"></ion-input>
+            <ion-item  (click)="openModal()">
+<ion-label >{{'Request location'|translate}}</ion-label>
+
+                <ion-label>{{MreqAddress}}</ion-label>
             </ion-item>
             <ion-item>
-                <span>{{'Request Add location'|translate}}</span>
-                <h2 (click)="locationmodal()"><ion-icon item-start ios="ios-pin" md="ios-pin"></ion-icon>{{'Click to add location'|translate}}</h2>
+                <ion-label>{{'Request Add location'|translate}}</ion-label>
+                <ion-label (click)="locationmodal()"><ion-icon item-start ios="ios-pin" md="ios-pin"></ion-icon>{{'Click to add location'|translate}}</ion-label>
             </ion-item>
+
         </ion-list>
 
-        <ion-list class="checkbox-list">
+        <!-- input form-->
+        <ion-list *ngIf="newFormDs?.input">
+
+<ion-item *ngFor="let input of newFormDs.input">
+<ion-label stacked>{{input.label}}</ion-label>
+<ion-input [type]="input.type|translate" [placeholder]="input.place_holder"></ion-input>
+
+</ion-item>
+
+        </ion-list>
+
+        <ion-list *ngIf="newFormDs?.select">
+            <ion-item *ngFor="let selectBox of newFormDs.select">
+                <ion-label>
+                    {{selectBox.label}}
+                </ion-label>
+                <ion-select [placeholder]="selectBox.accurate_message">
+                    <!--<ion-option selected>{{selectBox.accurate_message}}</ion-option> -->
+                    <ion-option *ngFor="let subSelect of selectBox.sub" [value]="subSelect.id">{{subSelect.label}}</ion-option>
+                </ion-select>
+            </ion-item>    
+        </ion-list>    
+<section *ngIf="newFormDs?.checkbox">
+        <ion-list *ngFor="let checkInput of newFormDs.checkbox" class="checkbox-list">
             <ion-list-header>
-                What type of property do you have? 
+                {{checkInput.label}}
             </ion-list-header>
-            <ion-item>
-                <ion-label>Daenerys Targaryen</ion-label>
-                <ion-checkbox checked="true"></ion-checkbox>
+            <ion-item *ngFor="let checkOption of checkInput.sub">
+                <ion-label>{{checkOption.label}}</ion-label>
+                <ion-checkbox checked="true" ></ion-checkbox>
             </ion-item>
 
-            <ion-item>
-                <ion-label>Arya Stark</ion-label>
-                <ion-checkbox></ion-checkbox>
-            </ion-item>
         </ion-list>
 
-        <ion-list radio-group class="radio-list">
-            <ion-list-header>
-                What type of property do you have? 
-            </ion-list-header>
+    </section>      
+        <section *ngIf="newFormDs?.radio">
+<ion-list *ngFor="let radioInput of newFormDs.radio" radio-group class="radio-list">
+    <ion-list-header>
+        {{radioInput.label}}
+    </ion-list-header>
 
-            <ion-item>
-                <ion-label>Go</ion-label>
-                <ion-radio checked="true" value="go"></ion-radio>
-            </ion-item>
+    <ion-item *ngFor = "let radioOption of radioInput.sub">
+        <ion-label>{{radioOption.label}}</ion-label>
+        <ion-radio  checked="false" [value]="radioOption.id"></ion-radio>
+    </ion-item>
+</ion-list>
+        </section>
 
-            <ion-item>
-                <ion-label>Rust</ion-label>
-                <ion-radio value="rust"></ion-radio>
-            </ion-item>
+        <section *ngIf="newFormDs.textarea" class="sec-textarea">
+            <div class="texarea-item" *ngFor="let textArea of newFormDs.textarea">
+                <p class="as-label">
+                    {{textArea.label}}
+                </p>
 
-            <ion-item>
-                <ion-label>Python</ion-label>
-                <ion-radio value="python"></ion-radio>
-            </ion-item>
-        </ion-list>
+                <textarea [placeholder]="textArea.accurate_message||textArea.place_holder"></textarea>
+            </div>
+            
 
-        <ion-row>
-            <button ion-button full>{{'Add Request'|translate}}</button>
-        </ion-row>      
+        </section>
+
+
+
+            <button margin-top ion-button full>{{'Add Request'|translate}}</button>
+     
     </div>
 </ion-content>
