--- a/src/pages/subcategory/subcategory.html
+++ b/src/pages/subcategory/subcategory.html
@@ -11,6 +11,8 @@
 
 <ion-content>
     <uz-loader *ngIf="ubzilLoader"></uz-loader>
+
+    <p *ngIf="noSearch">لا يوجد نتائج بحث متطابقة</p>
 <ion-list>
     <ion-item  *ngFor="let service of subServices" (click)="navigateTo(service)">
         <ion-thumbnail item-start>
