--- a/src/pages/get-location/get-location.html
+++ b/src/pages/get-location/get-location.html
@@ -8,11 +8,11 @@
 
     </ion-buttons>
     <ion-buttons end>
-      <button ion-button large (click)="dismiss()">
-        <ion-icon color="primary" large name="search"></ion-icon>
+      <button ion-button  (click)="dismiss()" [hidden]="pageParams?.skipSearch==true">
+        <ion-icon color="primary"  name="search"></ion-icon>
       </button>
       <button ion-button (click)="addMarker()">
-        <ion-icon ios="ios-locate-outline" large  md="ios-locate-outline"></ion-icon>
+        <ion-icon ios="ios-locate-outline"   md="ios-locate-outline"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
