--- a/src/pages/add-request/add-request.html
+++ b/src/pages/add-request/add-request.html
@@ -8,12 +8,12 @@
 
 
 <ion-content dir="ltr">
-  <div class="inner-content">
+  <form [formGroup]="RequestForm" novalidate (ngSubmit)="sendRequest()" class="inner-content">
     <ion-list>
       <ion-item>
         <ion-label stacked>{{'project title'|translate}}</ion-label>
 
-        <ion-input type="text" placeholder="Request title"></ion-input>
+        <ion-input type="text" placeholder="Request title" formControlName="title"></ion-input>
       </ion-item>
       <ion-item (click)="openModal()">
         <ion-label>{{'Request location'|translate}}</ion-label>
@@ -33,7 +33,7 @@
 
       <ion-item *ngFor="let input of newFormDs.input">
         <ion-label stacked>{{input.label}}</ion-label>
-        <ion-input [type]="input.type|translate" [placeholder]="input.place_holder"></ion-input>
+        <ion-input [type]="input.type|translate" [formControlName]="input.id" [placeholder]="input.place_holder"></ion-input>
 
       </ion-item>
 
@@ -44,7 +44,7 @@
         <ion-label>
           {{selectBox.label}}
         </ion-label>
-        <ion-select [placeholder]="selectBox.accurate_message" [okText]="pageParams.lang_code=='ar'?'تم':'ok'" [okText]="pageParams.lang_code=='ar'?'الغاء':'cancel'">
+        <ion-select [placeholder]="selectBox.accurate_message" [formControlName]="selectBox.id" [okText]="pageParams.lang_code=='ar'?'تم':'ok'" [okText]="pageParams.lang_code=='ar'?'الغاء':'cancel'">
           <!--<ion-option selected>{{selectBox.accurate_message}}</ion-option> -->
           <ion-option *ngFor="let subSelect of selectBox.sub" [value]="subSelect.id">{{subSelect.label}}</ion-option>
         </ion-select>
@@ -57,7 +57,7 @@
         </ion-list-header>
         <ion-item *ngFor="let checkOption of checkInput.sub">
           <ion-label>{{checkOption.label}}</ion-label>
-          <ion-checkbox checked="true"></ion-checkbox>
+          <ion-checkbox  ></ion-checkbox>
         </ion-item>
 
       </ion-list>
@@ -82,13 +82,13 @@
           {{textArea.label}}
         </p>
 
-        <textarea [placeholder]="textArea.accurate_message||textArea.place_holder"></textarea>
+        <textarea [formControlName]="textArea.id" [placeholder]="textArea.accurate_message||textArea.place_holder"></textarea>
       </div>
 
 
     </section>
 
-    <button margin-top ion-button full (click)="sendRequest()">{{'Add Request'|translate}}</button>
+    <button type="submit" margin-top ion-button full >{{'Add Request'|translate}}</button>
 
-  </div>
+  </form>
 </ion-content>
