--- a/src/pages/add-request/add-request.html
+++ b/src/pages/add-request/add-request.html
@@ -80,7 +80,8 @@
         *ngFor="let checkOption of checkInput.sub;let i = index"
         >
           <ion-label>{{checkOption.label}}</ion-label>
-          <ion-checkbox checked="false"  [formControlName]="checkOption.id"></ion-checkbox>
+          <!--[formControlName]="checkOption.id"-->
+          <ion-checkbox checked="false"    (ionChange)="changed($event,checkInput.id,checkOption.id)"></ion-checkbox>
         </ion-item>
 
       </ion-list>
