add some small edits on add request page

--- a/src/pages/add-request/add-request.html
+++ b/src/pages/add-request/add-request.html
@@ -13,7 +13,7 @@
       <ion-item>
         <ion-label stacked>{{'project title'|translate}}</ion-label>
 
-        <ion-input type="text" placeholder="Request title" formControlName="title"></ion-input>
+        <ion-input type="text" placeholder="Request title" formControlName="order_title"></ion-input>
       </ion-item>
       <ion-item (click)="openModal()">
         <ion-label>{{'Request location'|translate}}</ion-label>
