add dev only messages

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -32,9 +32,9 @@
 
         <ion-row class="user-links">
             
-                <a (click)="goSignup()" class="new-account" >{{'New Account?' | translate}}</a>
+                <a class="new-account" >{{'New Account?' | translate}}</a>
 
-                <a (click)="goForgetPass()" class="forget-pass">{{'Forget Your Password!' | translate}}</a>
+                <a class="forget-pass">{{'Forget Your Password!' | translate}}</a>
 
         </ion-row>
     </ion-grid>
