--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -243,7 +243,7 @@
 
       </ion-row>
     </ion-grid>
-
+<p text-center *ngIf="inErr">*DEV only Internal Server Error</p>
 
     <ion-grid *ngSwitchCase="'book'">
       <ion-row>
